--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Matt Delac</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/SL-GW" target="_blank">Sarah Gray</a> and
+          is
+          <a href="https://github.com/SL-GW/first-project" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://warm-palmier-3f8664.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
